--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ Rcliworkdir/.terraform/plugins/darwin_amd64/lock.json
 Rcliworkdir/.terraform/plugins/darwin_amd64/terraform-provider-aws_v2.66.0_x4
 Rcliworkdir/.terraform/plugins/darwin_amd64/terraform-provider-template_v2.1.2_x4
 rcli
+createIaC/createiac
